# Job_portal_project

./: .env  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 02720ad0d2ab_create_all_tables.py  211d9bf9609f_add_job_applications.py  3d4764613d91_create_all_tables.py  e36e8d239955_add_job_applications_table.py
app/: auth.py  config.py  crud.py  database.py  email_utils.py  main.py  models.py  schemas.py
app/routes/: admin.py  applications.py  auth.py  candidate.py  employer.py  jobs.py  saved_jobs.py
