[project]
name = "job-portal-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt==4.0.1",
    "cryptography>=48.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fastapi-mail==1.4.1",
    "passlib[bcrypt]>=1.7.4",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
